--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -39,13 +39,13 @@ import { Icon } from "astro-icon/components";
                 <p class="text-sm font-semibold mb-2 text-green-600 border-b pb-1">Working Hours</p>
                 <table class="w-full text-sm">
                   <tr class="hover:bg-gray-50">
-                  <td class="py-1 pr-4">Monday-Friday</td>
+                  <td class="py-1 pr-4">Mon - Sat</td>
                   <td class="py-1 text-green-600">9AM - 5PM</td>
                   </tr>
-                  <tr class="hover:bg-gray-50">
+                  <!-- <tr class="hover:bg-gray-50">
                   <td class="py-1 pr-4">Saturday</td>
                   <td class="py-1 text-red-500">Closed</td>
-                  </tr>
+                  </tr> -->
                   <tr class="hover:bg-gray-50">
                   <td class="py-1 pr-4">Sunday</td>
                   <td class="py-1 text-red-500">Closed</td>
@@ -63,8 +63,8 @@ import { Icon } from "astro-icon/components";
   <div class="bg-green-600 text-white py-2 hidden sm:block relative">
     <div class="container mx-auto px-4">
       <div class="flex items-center">
-        <span class="font-semibold text-red-600 animate-pulse mr-4">
-          Important Notice:
+        <span class="font-semibold bg-amber-300  text-red-600 animate-pulse mr-4">
+          Important Notice
         </span>
         <div class="overflow-hidden relative flex-1">
           <div class="animate-marquee whitespace-nowrap inline-block">
