--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -135,9 +135,13 @@ let isMobileMenuOpen = false;
 
     <div class="hidden md:flex items-center gap-2">
       <button
+      
         class="px-4 py-2 text-white cursor-pointer bg-green-600 hover:bg-green-700 rounded-md transition-colors"
       >
+      <a href="/online-portal" target="_blank" rel="noopener noreferrer">
+      
         Apply Now
+      </a>
       </button>
       
     </div>
