Add Google Analytics tracking script to layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ interface Props {
       name="google-site-verification"
       content="f3zA7ibAQ5iBDjxYYCsYL6mhPF9dMmV5ZcOY2wJE-bM"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -48,3 +49,12 @@ interface Props {
     <Footer />
   </body>
 </html>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5VV7GN7N5P"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-5VV7GN7N5P');
+    </script>
