Add Sitemap and Jobs pages; update Footer and Navbar components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,7 +49,8 @@ import { Icon } from "astro-icon/components";
               { name: "About", link: "/about" },
               { name: "Exams", link: "/exams" },
               { name: "Results", link: "/results" },
-              { name: "Contact", link: "/contact" }
+              { name: "Contact", link: "/contact" },
+              { name: "Sitemap", link: "/sitemap" },
             ].map((item) => (
               <li>
                 <a
