--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -33,6 +33,9 @@ const navItems: NavItem[] = [
       { label: "Sample Papers", href: "/downloads/sample-papers" },
       { label: "Application Form", href: "/downloads/application-form" },
       { label: "Tenders", href: "/downloads/tenders" },
+      { label: "Advertisment", href: "/jobs/advertisment" },
+
+      
     ],
   },
   {
