Add Microsoft site verification meta tag to layout

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ interface Props {
       name="google-site-verification"
       content="f3zA7ibAQ5iBDjxYYCsYL6mhPF9dMmV5ZcOY2wJE-bM"
     />
+    <meta name="msvalidate.01" content="26042D0CCB99592D87A70104455EB03F" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
