Add Suggestion component for user feedback and rating

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Layout from '../layouts/Layout.astro';
 import Contacts from '../components/Contacts.astro';
 
 import Hero from '../components/Hero.astro';
+import Suggestion from '../components/Suggestion.astro';
 
 ---
 
@@ -14,6 +15,7 @@ import Hero from '../components/Hero.astro';
 	 <Hero/>
 	 <Announcements />
 	 <Chairperson />
+	 <!-- <Suggestion/> -->
 	 <Activities />
 	 <Contacts />
 	
